2020-12-08 [2.1.18]
 * oprava zobrazeni Podle filtru (a-z, zanr, zeme, rok, studio)

2020-12-06 [2.1.17]
 * pridany koncerty
 * oprava zobrazeni hodnoceni a traileru

2020-12-04 [2.1.16]
 * oprava epizod u serialu (nektere nemaji sezony)
 * oprava chyby Podle jazyka (nevraci aktualne nic)

2020-11-30 [2.1.15]
 * oprava kvuli zmenam na serveru
 * oprava jazykoveho filtru

2020-11-16 [2.1.14]
 * Pridany CSFD TOP filmy a serialy

2020-08-12 [2.1.13]
 * Optimalizace a zrychlení komunikace se serverem
 * Vice CSFD tipu
 * Oprava abecedy

2020-08-10 [2.1.12]
 * Oprava chyby nacitani jazyku
 * Plakaty, popis a titulek se nyni nacita dle jazyka boxu (pokud neni, tak zkusi anglicky)
 * Pridany Trendy a Nejsledovanejsi

2020-08-07 [2.1.11]
 * Docasne reseni chyby po zmene na serveru

2020-07-31 [2.1.10]
 * Menu na polozce filmu ci serialu nabidne prehrani Traileru
 * V Nastaveni lze nastavit delsi timeout pokud server neodpovida vcas
 * V Nastaveni lze vypnout zobrazeni Kodeku a Bitrate
 * Zmena zobrazeni Studii, podle poctu videi sestupne, max. 500
 * Opravy drobnych chyb

2020-07-19 [2.1.9]
 * Menu na polozce filmu ci serialu nabidne Souvisejici nebo Podobne filmy a serialy
 * uprava parsovani vstupu

2020-07-17
 * oprava cesty importu

2020-07-13
 * oprava chyby v xml jazyku sk a en

2020-07-12
 * prejmenovani addonu na Stream Cinema Community
 * pridan vyber dle zeme, jazyka a roku
 * kompletne novy preklad vcetne Slovenstiny a Anglictiny
 * pridana cisla do abecedy
 * pridany CSFD tipy
 * drobne opravy

2020-06-27
 * oprava chyby filtru explicitniho obsahu

2020-06-26
 * oprava pouziti free ws uctu (bez prihlaseni)
 * oprava logovani
 * oprava filtru explicitniho obsahu

2020-06-20
 * pridano filtrovani dle bitrate, velikosti a kvality
 * oprava trideni A-Z
 * oprava chyby u duration
 * zobrazeni zanru i u streamu
 * uprava hledani pro seeker

2020-06-18
 * uprava Novinky a Novinky dabovane za 365 dni
 * oprava Jazykoveho filtru